--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
     <string name="ej3_btn_text">Ejercicio 3</string>
     <string name="ej4_btn_text">Ejercicio 4</string>
     <string name="ej5_btn_text">Ejercicio 5</string>
+
+    <!-- Exercise 2 strings -->
+    <string name="ej2_q_fav_color">¿Cuál es tu color favorito?</string>
+    <string name="ej2_hint_color">Introduce tu color favorito</string>
+    <string name="ej2_cb_blue">¿Te gusta el color azul?</string>
+    <string name="ej2_q_green">¿Te gusta el color verde?</string>
+    <string name="ej2_rb_yes">Sí</string>
+    <string name="ej2_rb_no">No</string>
+    <string name="ej2_btn_send">Enviar</string>
 </resources>
